# course-agentic-ai

./: main.py  pyproject.toml
1_first_agent/: basic_agent.py
2_agent_with_tool/: agent_with_tool.py
3_reasoning_agent/: reasoning_agent.py
4_multi_model_agent/: multi_model_agent.py  multimodel_2.py
5_eval_func/: func_eval.py  inventory_agent.py
6_eval_func _llm_judge/: func_eval_llm_judge.py  inventory_agent.py
7_eval_op_metrics/: func_eval.py  inventory_agent.py  utils.py
8_guardrails/: guardrails_1.py  guardrails_12.py
my-first-mcp-server/: README.md  main.py
