[project]
name = "course-gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-search-results>=2.4.2",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langsmith>=0.8.5",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "yfinance>=1.4.1",
]

[tool.uv.workspace]
members = [
    "my-first-mcp-server",
]
